# kuma

./: .tasks  README.md  alembic.ini  data.db  pyproject.toml  setup.cfg
app/backend/: api.py  main.py
app/backend/base/: errors.py  models.py  routes.py  schema.py
app/backend/core/: config.py  db.py  events.py  resources.py
app/backend/migrations/: env.py
app/backend/migrations/versions/: f769fbd91bc8_users_table.py
app/backend/pandaui/: socket.py
app/backend/services/: jwt.py  poc.py
app/backend/services/kuma/: code_generator.py  executor.py  inspector.py  main.py  mapper.py  poc.py  storage.py
app/backend/user/: dependencies.py  models.py  routes.py  schema.py
app/frontend/: .gitignore  package-lock.json  package.json
app/frontend/src/: App.js
scripts/: run
